<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.kuispahlawan.AboutActivity">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/icn"
        android:layout_marginBottom="16dp"
        android:padding="30dp"
        android:background="@android:color/holo_blue_light"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/description1"
        android:layout_below="@id/logo"
        style="@style/Description"
        android:background="@color/white"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/KuisPahlawan"/>

    <TextView
        android:id="@+id/description2"
        android:layout_below="@id/description1"
        style="@style/Description"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/white"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IAKDescription"/>

    <TextView
        android:id="@+id/version"
        android:layout_below="@id/description2"
        style="@style/Description"
        android:background="@color/white"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"/>

    <LinearLayout
        android:id="@+id/btn_mail"
        style="@style/Button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center" >

        <ImageView
            android:src="@drawable/mail"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MAIL DEVELOPER"/>

    </LinearLayout>


</RelativeLayout>
