<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kuispahlawan.ScoreActivity">

    <LinearLayout
        android:padding="16dp"
        android:background="@android:color/holo_blue_light"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="8" >

        <TextView
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="bottom"
            android:textAlignment="center"
            android:textSize="35sp"
            android:text="@string/nilai"/>

        <TextView
            android:id="@+id/score"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:textAlignment="center"
            android:textSize="110sp"
            android:text="@string/score"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom">

            <TextView
                style="@style/ScoreDescription"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="Benar"/>

            <TextView
                style="@style/ScoreDescription"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="Salah"/>

            <TextView
                style="@style/ScoreDescription"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="Kosong"/>

        </LinearLayout>

        <View
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FFFFFF"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/benar"
                style="@style/ScoreDescription"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="5"/>

            <TextView
                android:id="@+id/salah"
                style="@style/ScoreDescription"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="3"/>

            <TextView
                android:id="@+id/kosong"
                style="@style/ScoreDescription"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="2"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_pembahsan"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/pembahasan"/>

</LinearLayout>
